# Rpg-Scriber

./: .env_example  .gitignore  ANTIGRAVITY.md  CLAUDE.md  CODEX_REFERENCE.md  README.md  architectural_differences.md  dave_test_bot.py  implementacion_grafo_rol.md  implementation_fase2.md  probe.py  pyproject.toml  rpg-scribe-architecture.md  rpg.cmd
config/: default.toml
config/campaigns/: cyberpunk-2060.toml  cyberpunk-build-lab.toml  cyberpunk-build.toml  example.toml  mi-campana.toml
docs/: api-endpoints.md  architecture.md  audio-chunks-design.md  campaign-summaries.md  canonical-graph-model.md  discord-voice.md  loading-states-ux.md  rag-lib.md  rules-bot.md  summarizer-context.md  tts-narration.md  web-ui-entities.md  web-ui-features.md
scripts/: import_campaign.py  setup_discord_bot.py
src/rag_lib/: __init__.py  __main__.py  chunking.py  cli.py  errors.py  schema.py  store.py  types.py
src/rpg_scribe/: config.py  logging_config.py  main.py
src/rpg_scribe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_audio_filter.py  test_audio_router.py  test_bot_response_publisher.py  test_bots.py  test_catalogs.py  test_config.py  test_database.py  test_discord_bot.py  test_discord_listener.py  test_discord_tts_player.py  test_event_bus.py  test_file_listener.py  test_integration.py  test_logging_config.py  test_main.py  test_publisher.py  test_resilience.py  test_summarizer.py  test_transcriber.py  test_trigger_watcher.py  test_tts.py  test_tts_audio_utils.py  test_tts_discord_endpoint.py  test_tts_synthesizer.py  test_web.py
tests/bots/: test_rule_answerer.py  test_rule_retriever.py  test_rules_bot.py
tests/rag_lib/: conftest.py  test_chunking.py  test_cli.py  test_integration_ingest.py  test_search.py  test_search_fts.py  test_store.py  test_store_embeddings.py  test_update_chunk.py  test_upload.py  test_web_router.py  (+2 more)
(+138 files in other folders)
