[project]
name = "rpg-scribe"
version = "0.1.0"
description = "RPG session listener, transcriber, and summarizer"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",

    # Discord
    "discord.py[voice]>=2.3",
    "discord-ext-voice-recv>=0.5.0a167",

    # Audio processing
    "webrtcvad-wheels>=2.0.10",
    "numpy>=1.24",
    "soundfile>=0.12",

    # Transcription
    "openai>=1.0",
    "httpx>=0.25",

    # Summarization
    "anthropic>=0.30",

    # Web UI
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "websockets>=12.0",

    # Database
    "aiosqlite>=0.19",

    # Utils
    "structlog>=23.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.scripts]
rpg-scribe = "rpg_scribe.main:cli_main"

[project.optional-dependencies]
local = [
    "faster-whisper>=1.0",
    "torch>=2.0",
    "ctranslate2>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
